--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -7,65 +7,46 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/linearlayout"
-        android:layout_width="match_parent"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@id/loginLayout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="90dp"
-        android:orientation="vertical">
+        android:layout_marginTop="240dp"
+        android:layout_gravity="center">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/login"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
-            android:text="Username"
-            android:textSize="16dp" />
+            android:hint="Login"
+            android:background="@drawable/edit_text"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-        <EditText
-            android:id="@+id/editTextTextPersonName"
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:paddingLeft="10dp" />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/psswdLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/loginLayout"
+        android:layout_marginTop="28dp"
+        android:layout_gravity="center">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/psswd"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
-            android:text="Password"
-            android:textSize="16dp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/editTextTextPassword"
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:ems="10"
+            android:hint="Password"
             android:inputType="textPassword"
-            android:paddingLeft="10dp" />
+            android:background="@drawable/edit_text"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-            android:id="@+id/buttonSignIn"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="25dp"
-            android:text="SignIn"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/auth"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:text="Authorize"
+        android:textSize="17sp"
+        app:layout_constraintTop_toBottomOf="@+id/materialCheckBox"
+        android:layout_marginTop="60dp"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
